--- a/src/BlogBundle/Resources/views/Default/index.html.twig
+++ b/src/BlogBundle/Resources/views/Default/index.html.twig
@@ -7,7 +7,7 @@
         <div class="col-sm-10 col-sm-offset-1">
         {% for post in listPosts %}
             <div>
-                <h4>{{ post.title }}</h4>
+                <h4><a href="/{{ post.id }}">{{ post.title }}</a></h4>
                 <p>{{ post.content }}</p>
                 {% if loop.last == false %}
                 <hr>
