Objectif Vendredi atteint

--- a/src/BlogBundle/Resources/views/Default/show.html.twig
+++ b/src/BlogBundle/Resources/views/Default/show.html.twig
@@ -5,4 +5,6 @@
     {% block body %}
         <h1>{{ Post.title }}</h1>
         <p>{{ Post.content }}</p>
+        <a href="/edit/{{ Post.id }}">Editer l'article</a> |
+        <a href="/delete/{{ Post.id }}" class="text-danger">Supprimer l'article</a>
     {% endblock %}
