--- a/src/BlogBundle/Resources/views/Default/index.html.twig
+++ b/src/BlogBundle/Resources/views/Default/index.html.twig
@@ -8,7 +8,21 @@
         {% for post in listPosts %}
             <div>
                 <h4><a href="/{{ post.id }}">{{ post.title }}</a></h4>
-                <p>{{ post.content }}</p>
+                <p class="text-muted">
+                    <small>
+                        {% if post.isEdited %}
+                            Edité le :
+                        {% else %}
+                            Créé le :
+                        {% endif %}
+                        {{ post.modifiedat | date("d/m/Y à H/i") }}
+                    </small>
+                </p>
+                <p>{{ post.content[:400] }}
+                    {% if post.content | length > 400 %}
+                        <a href="/{{ post.id }}">... <i>lire la suite</i></a>
+                    {% endif %}
+                </p>
                 {% if loop.last == false %}
                 <hr>
                 {% endif %}
