--- a/src/BlogBundle/Resources/views/Default/show.html.twig
+++ b/src/BlogBundle/Resources/views/Default/show.html.twig
@@ -7,4 +7,15 @@
         <p>{{ Post.content }}</p>
         <a href="/edit/{{ Post.id }}">Editer l'article</a> |
         <a href="/delete/{{ Post.id }}" class="text-danger">Supprimer l'article</a>
+        <div class="comments">
+            <h3>Commentaires</h3>
+            {% for comment in Comments %}
+                <hr>
+                <div class="row">
+                    <div class="col-sm-2"><strong>auteur : {{ comment.author }}</strong><br><small>{{ comment.GetModifiedDiff()}}</small></div>
+                    <div class="col-sm-10"><em>{{ comment.content }}</em></div>
+                </div>
+            {% endfor %}
+        </div>
+
     {% endblock %}
