--- a/src/BlogBundle/Resources/views/Post/add.html.twig
+++ b/src/BlogBundle/Resources/views/Post/add.html.twig
@@ -10,7 +10,7 @@
             {{ form_row(form.content) }}
             <div id="imgur_select" class="form-group">
             </div>
-            <div class="hidden">
+            <div class="hidden" id="url_imgur">
                 {{ form_row(form.image) }}
             </div>
             {{ form_rest(form) }}
