les images qui marchent!!!!!

--- a/src/BlogBundle/Resources/views/Post/show.html.twig
+++ b/src/BlogBundle/Resources/views/Post/show.html.twig
@@ -12,7 +12,7 @@
                 <a href="/delete/{{ Post.id }}" class="text-danger">Supprimer l'article</a>
             </div>
             <div class="col-md-3">
-                <img src="{{ Post.image.url }}" alt="" class="thumbnail">
+                <img src="{{ Post.image.url }}" alt="" class="thumbnail" width="100%">
             </div>
         </div>
         {{ render(controller("BlogBundle:Comment:listByPost", {'id' : Post.id })) }}
