image aussi dans postedit

--- a/src/BlogBundle/Resources/views/Post/edit.html.twig
+++ b/src/BlogBundle/Resources/views/Post/edit.html.twig
@@ -5,5 +5,19 @@
     {% block body %}
         <h1>Editer l'article</h1>
         <h3>{{ Post.title }}</h3>
-        {{ form(form) }}
+        {{ form_start(form) }}
+        {{ form_errors(form) }}
+        {{ form_row(form.content) }}
+        <div id="imgur_select" class="form-group">
+        </div>
+        <div class="hidden" id="url_imgur">
+            {{ form_row(form.image) }}
+        </div>
+        {{ form_rest(form) }}
+
+        {{ form_end(form) }}
+
+    {% endblock %}
+    {% block javascripts %}
+        <script src="{{ asset('bundles/BlogBundle/JS/imgurEdit.js') }}" type="text/javascript"></script>
     {% endblock %}
