Entité categorie créé

--- a/src/BlogBundle/Resources/views/Post/add.html.twig
+++ b/src/BlogBundle/Resources/views/Post/add.html.twig
@@ -4,7 +4,7 @@
     {% endblock %}
     {% block body %}
         <h1>Ajouter un Article</h1>
-        {{ form_start(form) }}
+        {{ form_start(form, {"action" : "/add"}) }}
             {{ form_errors(form) }}
             {{ form_row(form.title) }}
             {{ form_row(form.content) }}
