--- a/src/BlogBundle/Resources/views/index_template.html.twig
+++ b/src/BlogBundle/Resources/views/index_template.html.twig
@@ -3,9 +3,9 @@
         Blog index
     {% endblock %}
     {% block body %}
-        <h1>{{ Category.name }}</h1>
+        {% block index_title %}{% endblock %}
         <div class="col-sm-10 col-sm-offset-1">
-            {% for post in Category.posts %}
+            {% block index_loop %}{% endblock %}
                 <div class="row">
                     <div class="col-sm-3">
                         <a href="/{{ post.id }}">
