--- a/src/BlogBundle/Resources/views/Category/index_by_category.html.twig
+++ b/src/BlogBundle/Resources/views/Category/index_by_category.html.twig
@@ -1,4 +1,4 @@
 {% extends "BlogBundle::post_list_template.html.twig" %}
 {% block list_title %}
-    Liste des Articles
+    {{ title }}
 {% endblock %}
