--- a/src/BlogBundle/Resources/views/post_list_template.html.twig
+++ b/src/BlogBundle/Resources/views/post_list_template.html.twig
@@ -3,9 +3,9 @@
         Blog index
     {% endblock %}
     {% block body %}
-        <h1>{{ Category.name }}</h1>
+        <h1>{% block list_title %}Liste des articles{% endblock %}</h1>
         <div class="col-sm-10 col-sm-offset-1">
-            {% for post in Category.posts %}
+            {% for post in listPosts %}
                 <div class="row">
                     <div class="col-sm-2">
                         <img src="{{ post.image.url }}" alt="" width="100%">
@@ -24,7 +24,7 @@
                                 {% else %}
                                     Créé le :
                                 {% endif %}
-                                {{ post.modifiedat | date("d/m/Y à H/i") }}
+                                {{ post.modifiedat | date("d/m/Y à H:i") }}
                             </small>
                         </p>
                         <p>{{ post.content[:400] }}
