--- a/src/BlogBundle/Resources/views/post_list_template.html.twig
+++ b/src/BlogBundle/Resources/views/post_list_template.html.twig
@@ -3,7 +3,8 @@
         Blog index
     {% endblock %}
     {% block body %}
-        <h1>{% block list_title %}Liste des articles{% endblock %}</h1>
+        <h1>{% block list_title %}
+            {% endblock %}</h1>
         <div class="col-sm-10 col-sm-offset-1">
             {% for post in listPosts %}
                 <div class="row">
