--- a/src/BlogBundle/Resources/views/Post/show.html.twig
+++ b/src/BlogBundle/Resources/views/Post/show.html.twig
@@ -6,10 +6,22 @@
         <h1>{{ Post.title }}</h1>
         <div class="row">
             <div class="col-md-9">
-
+                <p class="text-muted">
+                    {% if Post.isEdited %}
+                        Edité le :
+                    {% else %}
+                        Créé le :
+                    {% endif %}
+                    {{ Post.modifiedat | date("d/m/Y à H:i") }}
+                    <span>
+                        par {{ Post.user.username }}
+                    </span>
+                </p>
                 <p>{{ Post.content }}</p>
-                <a href="/edit/{{ Post.id }}">Editer l'article</a> |
-                <a href="/delete/{{ Post.id }}" class="text-danger">Supprimer l'article</a>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <a href="/edit/{{ Post.id }}">Editer l'article</a> |
+                    <a href="/delete/{{ Post.id }}" class="text-danger">Supprimer l'article</a>
+                {% endif %}
             </div>
             <div class="col-md-3">
                 <img src="{{ Post.image.url }}" alt="" class="thumbnail" width="100%">
@@ -20,5 +32,10 @@
                 </p>
             </div>
         </div>
-        {{ render(controller("BlogBundle:Comment:listByPost", {'id' : Post.id })) }}
+        {% if app.request.method == "POST" %}
+            {{ render(controller("BlogBundle:Comment:listByPost", {'id' : Post.id , 'request' : app.request })) }}
+        {% else %}
+            {{ render(controller("BlogBundle:Comment:listByPost", {'id' : Post.id })) }}
+        {% endif %}
+
     {% endblock %}
