--- a/src/BlogBundle/Resources/views/Author/index_by_author.html.twig
+++ b/src/BlogBundle/Resources/views/Author/index_by_author.html.twig
@@ -1,4 +1,4 @@
 {% extends "BlogBundle::post_list_template.html.twig" %}
 {% block list_title %}
-    <small> Articles dans la catégorie : </small>{{ title }}
+    <small> Articles rédigés par </small>{{ title }}
 {% endblock %}
