--- a/src/BlogBundle/Resources/views/post_list_template.html.twig
+++ b/src/BlogBundle/Resources/views/post_list_template.html.twig
@@ -29,7 +29,7 @@
                                 {% endif %}
                                 {{ post.modifiedat | date("d/m/Y à H:i") }}
                                 <span>
-                                    par {{ post.user.username }}
+                                    par <a href="{{ path('index_by_author', {"id" : post.user.id})}}">{{ post.user.username }}</a>
                                 </span>
                             </small>
                         </p>
